--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h2>Cool</h2>
   <nav class="top">
     <div class="dropdownBackground">
       <span class="arrow"></span>
@@ -16,7 +15,7 @@
 
     <ul class="cool">
       <li>
-        <a href="#">About Me</a>
+        <a href="#">About</a>
         <div class="dropdown dropdown1">
           <div class="bio">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio vitae veritatis obcaecati, corrupti dolor reprehenderit, officiis adipisci dolores ipsam cum doloremque consectetur aliquam perferendis quis dolore modi fugit, at quo.</p>
@@ -65,7 +64,7 @@
         </ul>
       </li>
       <li>
-        <a href="#">Other Links</a>
+        <a href="#">Links</a>
         <ul class="dropdown dropdown3">
           <li><a class="button" href="https://linkedin.com/in/vwvats">LinkedIn</a></li>
           <li><a class="button" href="https://vwvats.com">Website</a></li>
@@ -74,5 +73,44 @@
       </li>
     </ul>
   </nav>
+
+  <script>
+    const triggers = document.querySelectorAll('.cool > li');
+    const background  = document.querySelector('.dropdownBackground');
+    const nav  = document.querySelector('.top');
+
+    function handleEnter() {
+      this.classList.add('trigger-enter');
+      setTimeout(() => {
+      if (this.classList.contains('trigger-enter')) {
+        this.classList.add('trigger-enter-active')
+        }
+      }, 150);
+      background.classList.add('open');
+
+      const dropdown = this.querySelector('.dropdown');
+      const dropdownCoords = dropdown.getBoundingClientRect();
+      const navCoords = nav.getBoundingClientRect();
+
+      const coords = {
+        height: dropdownCoords.height,
+        width: dropdownCoords.width,
+        top: dropdownCoords.top - navCoords.top,
+        left: dropdownCoords.left - navCoords.left
+      };
+
+      background.style.setProperty('width', `${coords.width}px`);
+      background.style.setProperty('height', `${coords.height}px`);
+      background.style.setProperty('transform', `translate(${coords.left}px, ${coords.top}px)`);
+    }
+
+    function handleLeave() {
+      this.classList.remove('trigger-enter', 'trigger-enter-active');
+      background.classList.remove('open');
+    }
+
+    triggers.forEach(trigger => trigger.addEventListener('mouseenter', handleEnter));
+    triggers.forEach(trigger => trigger.addEventListener('mouseleave', handleLeave));
+  </script>
 </body>
 </html>
